--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@mdi/font": "^3.5.95",
     "core-js": "^2.5.4",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.3.3",
